# Meridians-verse

./: README.md
meridian-api/: nest-cli.json  package-lock.json  package.json
meridian-api/src/: app.module.ts  auth-guard.guard.ts  main.ts  pagination.provider.ts
meridian-api/src/DTO/: create-post.dto.ts  create-user.dto.ts  createPostMetadto.ts  getPostdto.ts  patch-post.dto.ts  patch-user.dto.ts  postparamdto.ts  signin-dto.ts  userparamdto.ts
meridian-api/src/auth/: auth.controller.ts  auth.module.ts
meridian-api/src/auth/auth.endoints/: signin.endpoint.http
meridian-api/src/auth/constant/: auth-constant.ts
meridian-api/src/auth/decorators/auth/: auth.decorator.ts
meridian-api/src/auth/decorators/auth-guard/: auth-guard.guard.ts
meridian-api/src/auth/dto/: refresh-token-dto.ts
meridian-api/src/auth/enums/: auth-type.enum.ts
meridian-api/src/auth/guard/access-token/: access-token.guard.ts
meridian-api/src/auth/providers/: auth.service.spec.ts  auth.service.ts  bcrypt.ts  hashing.ts  refreshToken.provider.ts  sign-in.providers.ts  token.provider.ts
meridian-api/src/commom/: pagination.module.ts  userAlreadyExistException.ts
meridian-api/src/commom/interceptor/data-response/: data-response.interceptor.ts
meridian-api/src/commom/pagination/Provider/: pagination.ts
meridian-api/src/mail/: mail.module.ts
meridian-api/src/mail/providers/: mail.provider.ts
meridian-api/src/mail/template/: welcome.ejs
meridian-api/src/metaoption/: metaoption.controller.ts  metaoption.entity.ts  metaoption.module.ts  metaoption.service.ts
meridian-api/src/notification/services/: email.service.ts
meridian-api/src/post/: post.controller.ts  post.entity.ts  post.module.ts
meridian-api/src/post/Enums/: post-status.enum.ts  post-type.enum.ts
meridian-api/src/post/provider/: post.service.ts
meridian-api/src/tag/: tag.controller.ts  tag.entity.ts  tag.module.ts  tags.service.ts
meridian-api/src/tweets/: tweet.controller.ts  tweet.service.ts
meridian-api/src/tweets/dto/: create-tweet.dto.ts  tweet.entity.ts  tweet.module.ts  update-tweet.dto.ts
meridian-api/src/upload/: upload.controller.ts
meridian-api/src/users/: user.entity.ts  users.controller.ts  users.module.ts
meridian-api/src/users/dtos/: createManyUserdto.ts
meridian-api/src/users/providers/: create-user.provider.ts  createManyUser.Provider.ts  createUserWithBook.ts  find-one-by-email.ts  user-auth.facade.spec.ts  user-auth.facade.ts  user.service.spec.ts  user.services.ts
meridian-contracts/: .gitignore  Cargo.toml
meridian-contracts/common/: integrity.rs  multisig.rs
meridian-contracts/contracts/bridge/: Cargo.toml
meridian-contracts/contracts/escrow/src/: tests.rs  types.rs  validation.rs
meridian-contracts/contracts/governance/: Cargo.toml
meridian-contracts/contracts/insurance/src/: insurance_tests.rs  storage_helpers.rs  types.rs
meridian-contracts/contracts/lib/: Cargo.toml
meridian-contracts/contracts/lib/src/: lib.rs
meridian-contracts/contracts/policy/: Cargo.toml
meridian-contracts/contracts/property-token/src/: property_token_tests.rs  types.rs
meridian-contracts/contracts/proxy/: Cargo.toml
meridian-contracts/contracts/risk_pool/: Cargo.toml
meridian-contracts/contracts/slashing/: Cargo.toml
meridian-contracts/docs/: architecture.md  deployment.md
meridian-contracts/security-tests/: Cargo.toml  README.md
meridian-contracts/security-tests/src/: fuzz_tests.rs  lib.rs  property_based_tests.rs  security_analysis.rs
meridian-contracts/tests/: Cargo.toml  cross_contract_integration.rs  fuzz_tests.rs  fuzz_tests_simple.rs  performance_benchmarks.rs  property_based_simple.rs  property_based_tests.rs  test_utils.rs
meridian-web/meridian-api/src/: app.controller.spec.ts  app.module.spec.ts  app.module.ts  app.service.ts
meridian-web/meridian-api/src/common/: index.ts
meridian-web/meridian-api/src/common/constants/: roles.ts
meridian-web/meridian-api/src/types/: express.d.ts
(+45 files in other folders)
