[package]
name = "stellar-insured-policy"
version = "1.0.0"
authors = ["Stellar Insured Team"]
edition = "2021"
description = "Insurance policy management contract for Stellar Insured"
license = "MIT"
publish = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-insured-lib = { path = "../lib" }

[lib]
name = "stellar_insured_policy"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = ["soroban-sdk/testutils"]
